@@ -596,6 +596,7 @@ class movies:
                         'name': i[0],
                         'url': self.tmdb_providers_link % i[1],
                         'image': i[2],
+                        'plot': '[I]Provided by JustWatch[/I]',
                         'action': 'movies'
                     })
         self.addDirectory(self.list)
